link copy feature

--- a/frontend/Deposit.html
+++ b/frontend/Deposit.html
@@ -30,8 +30,11 @@
     <div class="main-content">
         <div class="copy-link"> 
             <button class="buttons">Get Banners</button>
-            <button class="buttons">Copy Referal Link</button><br>
-            <textarea class="textarea">This is Your Link</textarea>
+            <div class="referral-link">
+                <button onclick="copyReferralLink()">Copy Referral Link</button>
+                <span>https://intelligencebotminer.com/?ref=BARLION</span>
+                <script src="Resources/Js/styling.js"></script>
+            </div>
         </div>
         <div class="current-balance"><div class="current-balance-box">Current Balance<br><span>$0.00</span></div></div>
         <div class="account-balance-section">\
