--- a/frontend/Withdraw.html
+++ b/frontend/Withdraw.html
@@ -10,7 +10,7 @@
         <div class="welcome-message">Welcome to Magnetic Trading, User</div>
         <div>
             <button class="buttons">Get Bonus</button>
-            <button class="buttons">Make Deposit</button>
+            <button class="buttons"><a class="butco" href="Deposit.html">Make Deposit</a></button>
             <button class="buttons">Withdraw</button>
         </div>
     </div>
