--- a/frontend/Banners.html
+++ b/frontend/Banners.html
@@ -38,6 +38,31 @@
         </div>
         <div class="current-balance"><div class="current-balance-box">Current Balance<br><span>$0.00</span></div></div>
         <div>
+            <div class="referral-container">
+                <h2>Your Unique Referral Link:</h2>
+                <div class="referral-link">
+                    <span>https://intelligencebotminer.com/?ref=BARLION</span>
+                    <button onclick="copyReferralLink()">Copy Referral Link</button>
+                </div>
+                <div class="banner-sizes">
+                    <button class="active" onclick="showBanner('125x125')">125x125</button>
+                    <button onclick="showBanner('125x125')">125x125</button>
+                    <button onclick="showBanner('468x60')">468x60</button>
+                    <button onclick="showBanner('468x60')">468x60</button>
+                    <button onclick="showBanner('728x90')">728x90</button>
+                    <button onclick="showBanner('728x90')">728x90</button>
+                </div>
+                <div class="banner-code">
+                    <label for="banner-code">Banner code:</label>
+                    <textarea id="banner-code" rows="3" readonly>
+        <a href="https://intelligencebotminer.com/?ref=BARLION">
+            <img src="https://intelligencebotminer.com/banners/banner125.gif" alt="" width="125" height="125" />
+        </a>
+                    </textarea>
+                </div>
+            </div>
+        
+            <script src="Resources/Js/styling.js"></script>
             
         </div>
         <div class="contact">
