--- a/frontend/Earnings.html
+++ b/frontend/Earnings.html
@@ -54,7 +54,9 @@
                         <option>Ethereum</option>
                         <option>USDT</option>
                     </select>
+                    From:
                     <input type="date"><br>
+                    To:
                     <input type="date">
                 </div>
                 <button class="go-btn">Go</button>
