--- a/frontend/Referrals.html
+++ b/frontend/Referrals.html
@@ -65,6 +65,24 @@
             <script src="Resources/Js/styling.js"></script>
             
         </div>
+        <div class="referrals-container">
+            <h2>Your Referrals:</h2>
+            <table>
+                <tr>
+                    <td>Referrals:</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>Active referrals:</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>Total referral commission:</td>
+                    <td>$0.00</td>
+                </tr>
+            </table>
+        </div>
+        
         <div class="contact">
             <h5>Our Social Media</h5>
             <a href="https://www.linkedin.com">LinkedIn</a><br>
@@ -74,5 +92,6 @@
             <a href="https://www.facebook.com">Facebook</a><br>
             <a href="https://www.reddit.com">Reddit</a><br>
         </div>
+</div>
 </body>
 </html>
