Trdaing Signals Page

--- a/frontend/Banners.html
+++ b/frontend/Banners.html
@@ -21,6 +21,7 @@
         <a href="Earnings.html" class="icon-link"><img src="Resources/img/History.png" alt="History"><div class="popup">Earnings History</div></a>
         <a href="Banners.html" class="icon-link"><img src="Resources/img/Banners.png" alt="Banners"><div class="popup">Your Banners</div></a>
         <a href="Referrals.html" class="icon-link"><img src="Resources/img/Links.png" alt="Ref. Links"><div class="popup">References</div></a>
+        <a href="Signals.html" class="icon-link"><img src="Resources/img/Signal.png" alt="Trading Signals"><div class="popup">Trading Signals</div></a>
         <a href="Edits.html" class="icon-link"><img src="Resources/img/Account.png" alt="Edit Account"><div class="popup">Edit Account</div></a>
         <a href="index.html" class="icon-link"><img src="Resources/img/LogOut.png" alt="Icon 5"><div class="popup">Logout</div></a>
     </div>
@@ -65,14 +66,10 @@
             <script src="Resources/Js/styling.js"></script>
             
         </div>
-        <div class="contact">
-            <h5>Our Social Media</h5>
-            <a href="https://www.linkedin.com">LinkedIn</a><br>
-            <a href="https://www.instagram.com">Instagram</a><br>
-            <a href="https://www.twitter.com">Twitter</a><br>
-            <a href="https://www.discord.com">Discord</a><br>
-            <a href="https://www.facebook.com">Facebook</a><br>
-            <a href="https://www.reddit.com">Reddit</a><br>
+        <div class="footer">
+            <h5 class="footer5">Our Social Media</h5>
+            <a href="www.telegram.com" class="footlink"><img src="Resources/img/telegram.png" alt="Dashboard"><div class="popup">Telegram</div></a>
+            <a href="www.whatsapp.com" class="footlink"><img src="Resources/img/Whatsapp.png" alt="Dashboard"><div class="popup">Whatsapp</div></a>
         </div>
 </body>
 </html>
